force-app/main/default/objects/Deleted_Job__c/Deleted_Job__c.object-meta.xml
<CustomObject>
    <label>Deleted Job</label>
    <nameField>
        <displayFormat>DELJOBS-{0000}/{YYYY}</displayFormat>
        <label>Deleted Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>