force-app/main/default/objects/Deleted_Job__c/fields/CanBeRemoved__c.field-meta.xml
<CustomField>
    <fullName>CanBeRemoved__c</fullName>
    <description>True if job can be deleted from the log, because sync already done</description>
    <formula>DATEVALUE(CreatedDate) &lt; (TODAY()-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CanBeRemoved</label>
    <type>Checkbox</type>
</CustomField>