force-app/main/default/objects/Deleted_Job__c/fields/DeletedDate__c.field-meta.xml
<CustomField>
    <fullName>DeletedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>DeletedDate</label>
    <type>DateTime</type>
</CustomField>