force-app/main/default/objects/Deleted_Job__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>JobID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>